Fixing product page problem when clothing - vertical alignment of add and wishlist buttons. Slightly odd fix, but it seems to work ok

--- a/oscar/static/oscar/css/styles.css
+++ b/oscar/static/oscar/css/styles.css
@@ -7645,6 +7645,10 @@ form.flat {
 .control-label.required span {
   color: #FF0000;
 }
+/* weird alternative to btn-block for specific use on the product page, where btn-block would cause a vertical misalignment when product size options are shown */
+.btn-add-to-basket {
+  width: 100%;
+}
 .navbar-static-top.navbar .nav > li > a {
   padding: 10px 15px;
 }
