--- a/oscar/static/oscar/less/page/forms.less
+++ b/oscar/static/oscar/less/page/forms.less
@@ -30,3 +30,8 @@ form {
 .control-label.required span {
     color: #FF0000;
 }
+
+/* weird alternative to btn-block for specific use on the product page, where btn-block would cause a vertical misalignment when product size options are shown */
+.btn-add-to-basket {
+    width:100%;
+}
